# password_generator

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: basic_code_style_and_security_checks.yaml
app/: manage.py
app/config/: settings.py  urls.py
app/generator/: generator_services.py  views.py
app/generator/templates/generator/: base.html  home.html
password_generator/generator/: generator_services.py  password_generator.py  views.py
password_generator/generator/templates/generator/: about.html  base.html  home.html  password.html
password_generator/password_generator/: settings.py  urls.py
style/: .flake8
